fix logo not displaying in dark mode

--- a/css/archive.css
+++ b/css/archive.css
@@ -225,7 +225,7 @@ body {
         display: none;
     }
     .links ul .logo_dark {
-        display: none;
+        display: block;
     }
     .bars::before,
     .bars::after {
